--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 
   }
   
-  /* style par défault de toutes les aiguilles */
+  /* style par defaut de toutes les aiguilles */
   .hands>*{
 
     position: absolute;
